--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,17 @@ dependencies {
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
-    compile 'org.mockito:mockito-core:3.2.4'
+    compile 'org.mockito:mockito-core:3.6.0'
     implementation name: 'Controller'
     compile files("libs/Controller.jar")
-    nativeDesktopZip name: 'dlls', ext: 'zip'
+
+    if (System.properties['os.name'].toLowerCase().contains('windows')) {
+        nativeDesktopZip name: 'dlls', ext: 'zip'
+    } else if (System.properties['os.name'].toLowerCase().contains('mac')) {
+        nativeDesktopZip name: 'dylibs', ext: 'zip'
+    } else {
+        println "Currently compatible only with Windows and Mac OS"
+    }
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
