--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "org.carlmontrobotics.gradle.webots-plugin"
+    id "org.carlmontrobotics.gradle.webots-plugin" // Defined in ./buildSrc
     id "edu.wpi.first.GradleRIO" version "2020.3.2"
 }
 
