--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     compile 'org.mockito:mockito-core:3.6.0'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
 }
