--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java-library"
-    id "edu.wpi.first.GradleRIO" version "2021.1.1-beta-4"
+    id "edu.wpi.first.GradleRIO" version "2021.1.2"
 }
 
 group 'org.carlmontrobotics'
