--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+# This gitignore has been specially created by the WPILib team.
+# If you remove items from this file, intellisense might break.
 
 ### C++ ###
 # Prerequisites
@@ -17,6 +18,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
+*.dll
 
 # Fortran module files
 *.mod
@@ -47,9 +49,11 @@
 .mtj.tmp/
 
 # Package Files #
+*.jar
 *.war
 *.nar
 *.ear
+*.zip
 *.tar.gz
 *.rar
 
@@ -134,7 +138,6 @@ $RECYCLE.BIN/
 ### Gradle ###
 .gradle
 /build/
-/buildSrc/build
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -149,12 +152,11 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # # VS Code Specific Java Settings
+# DO NOT REMOVE .classpath and .project
 .classpath
 .project
 .settings/
 bin/
-imgui.ini
 
-
-# End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
-*.wbproj
+# Simulation GUI and other tools window save file
+*-window.json
