--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'org.mockito:mockito-core:3.6.0'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    implementation files('pathplannerlib-beta.jar', 'pathplannerlib-beta-javadoc.jar', 'pathplannerlib-beta-sources.jar')
+}
+
+import org.gradle.plugins.ide.eclipse.model.*
+
+eclipse {
+    classpath {
+        file {
+            whenMerged { Classpath classpath ->
+                classpath.entries.each { ClasspathEntry entry ->
+                    if (entry instanceof AbstractLibrary && entry.library.file == file("pathplannerlib-beta.jar")) {
+                        entry.javadocPath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-javadoc.jar"))
+                        entry.sourcePath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-sources.jar"))
+                    }
+                }
+            }
+        }
+    }
 }
 
 // Simulation configuration (e.g. environment variables).
