--- a/build.gradle
+++ b/build.gradle
@@ -76,22 +76,24 @@ dependencies {
     implementation files('pathplannerlib-beta.jar', 'pathplannerlib-beta-javadoc.jar', 'pathplannerlib-beta-sources.jar')
 }
 
-import org.gradle.plugins.ide.eclipse.model.*
+// Uncomment to enable source viewing of pathplanner libraries (This won't be necessary when the push the latest version to their maven repo)
+// (This breaks the build)
+// import org.gradle.plugins.ide.eclipse.model.*
 
-eclipse {
-    classpath {
-        file {
-            whenMerged { Classpath classpath ->
-                classpath.entries.each { ClasspathEntry entry ->
-                    if (entry instanceof AbstractLibrary && entry.library.file == file("pathplannerlib-beta.jar")) {
-                        entry.javadocPath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-javadoc.jar"))
-                        entry.sourcePath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-sources.jar"))
-                    }
-                }
-            }
-        }
-    }
-}
+// eclipse {
+//     classpath {
+//         file {
+//             whenMerged { Classpath classpath ->
+//                 classpath.entries.each { ClasspathEntry entry ->
+//                     if (entry instanceof AbstractLibrary && entry.library.file == file("pathplannerlib-beta.jar")) {
+//                         entry.javadocPath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-javadoc.jar"))
+//                         entry.sourcePath = fileReferenceFactory.fromFile(file("pathplannerlib-beta-sources.jar"))
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 
 // Simulation configuration (e.g. environment variables).
 wpi.sim.addGui().defaultEnabled = true
