--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -21,7 +21,7 @@ jobs:
         path: ./build/docs/javadoc
   deploy-javadoc:
     needs: build-javadoc
-    if: github.ref == 'refs/heads/master'
+    if: ${{ github.ref == 'refs/heads/master' }}
     permissions:
       pages: write
       id-token: write
