--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -6,14 +6,14 @@ jobs:
   build-javadoc:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        java-version: 11
-    - name: Generate Javadoc
+        distribution: 'temurin'
+        java-version: 17
       run: ./gradlew javadoc
     - name: Build Artifact
       uses: actions/upload-pages-artifact@v1.0.5
@@ -32,4 +32,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1.2.3
+        uses: actions/deploy-pages@v1
