--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
 		}
 	},
 
-	"postStartCommand": "./.devcontainer/installWPILibExtension.sh"
+	"postAttachCommand": "./.devcontainer/installWPILibExtension.sh"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
