--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-"bin/": true,
+    "bin/": true,
     "**/.classpath": true,
     "**/.project": true,
     "**/.settings": true,
@@ -18,14 +18,16 @@
     {
       "name": "WPIlibUnitTests",
       "workingDirectory": "${workspaceFolder}/build/jni/release",
-      "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/jni/release" ],
+      "vmargs": [
+        "-Djava.library.path=${workspaceFolder}/build/jni/release"
+      ],
       "env": {
-        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release" ,
+        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release",
         "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release"
       },
       "preLaunchTask": "gradle: assemble"
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "java.gradle.buildServer.enabled":"on"
+  "java.gradle.buildServer.enabled": "on"
 }
