Stop adding libraries we use to the jar file so we don't get duplicates of classes.

--- a/build.gradle
+++ b/build.gradle
@@ -81,14 +81,17 @@ dependencies {
 wpi.sim.addGui().defaultEnabled = true
 wpi.sim.addDriverstation()
 
-// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
-// in order to make them all available at runtime. Also adding the manifest so WPILib
-// knows where to look for our Robot Class.
+// Setting up my Jar File. 
 jar {
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    // Note: Do NOT add all the libraries to the jar. Doing so will cause robot programs to have
+    // 2 copies of each of the libraries classes, one from lib199 and one from the robot program.
     from sourceSets.main.allSource
+
+    // Add the manifest so WPILib knows where to look for our Robot Class.
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+
+    // There shouldn't be any duplicate classes.
+    duplicatesStrategy = DuplicatesStrategy.FAIL
 }
 
 publishing {
