--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,7 @@ javadoc {
         links 'https://www.kauailabs.com/public_files/navx-mxp/apidocs/java/'
         links 'https://pathplanner.dev/api/java/'
         links 'https://api.ctr-electronics.com/phoenix/release/java/'
+        links 'https://api.ctr-electronics.com/phoenix6/release/java/'
         links 'https://www.playingwithfusion.com/frc/2022/javadoc/'
         links 'https://codedocs.revrobotics.com/java/'
     }
