--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2025.2.1"
+    id "edu.wpi.first.GradleRIO" version "2025.3.2"
     id "maven-publish"
     id "eclipse"
 }
@@ -75,6 +75,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'junit:junit:4.13.2'
 
     implementation 'org.mockito:mockito-core:5.11.0'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
