Fixed java docs?

--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -17,13 +17,14 @@ jobs:
     - name: Generate Javadoc
       run: ./gradlew javadoc
     - name: Build Artifact
-      uses: actions/upload-pages-artifact@v1
+      uses: actions/upload-pages-artifact@v4
       with:
         path: ./build/docs/javadoc
   deploy-javadoc:
     needs: build-javadoc
     if: ${{ github.ref == 'refs/heads/master' }}
     permissions:
+      actions: read
       pages: write
       id-token: write
     environment:
@@ -33,4 +34,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
